fixed letter-spacing for place__url-heading

--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,7 +3,7 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 12px;
-  letter-spacing: 0.32px;
+  letter-spacing: 2px;
   text-transform: uppercase;
   margin: 0 0 12px 0;
 }
